crates/core/tests/proc/svc/opaque.stderr
error[E0080]: evaluation of constant value failed
  --> tests/proc/svc/opaque.rs:13:12
   |
13 |     pub fn new() -> ffi::Result<Self, Error> {
   |            ^^^ evaluation panicked: This method looks like a constructor, but does not return ffi::Result<Self, _>
